# ZenClaude

./: .gitignore  README.md  pyproject.toml
tests/: test_stream_parser.py
zenclaude/: cli.py  config.py  docker_manager.py  engine.py  models.py  notify.py  paths.py  session_store.py  skills.py  snapshot.py  stream_parser.py
zenclaude/docker/: Dockerfile  entrypoint.sh
zenclaude/web/: __init__.py  app.py
zenclaude/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
zenclaude/web/frontend/src/: App.tsx  types.ts
zenclaude/web/frontend/src/components/: AgentTreeCard.tsx  EventCard.tsx  EventColumn.tsx  EventColumns.tsx  InstanceList.tsx  NewTaskModal.tsx  StatusDiamond.tsx
zenclaude/web/frontend/src/hooks/: useSessions.ts  useWebSocket.ts
zenclaude/web/frontend/src/styles/: global.css
zenclaude/web/static/: app.js  style.css
zenclaude/web/templates/: index.html
