[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenclaude"
version = "0.1.0"
description = "Run Claude Code autonomously inside Docker containers"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "docker>=7.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "websockets>=12.0",
]

[project.scripts]
zenclaude = "zenclaude.cli:main"

[tool.setuptools.packages.find]
include = ["zenclaude*"]

[tool.setuptools.package-data]
"zenclaude.docker" = ["Dockerfile", "entrypoint.sh"]
"zenclaude.web" = ["templates/*.html", "static/*.css", "static/*.js"]
